Fix layout bugs

--- a/src/components/button.css
+++ b/src/components/button.css
@@ -8,6 +8,7 @@
 }
   
 .button:hover {
+    background-color: #0035B5;
     box-shadow: 0px 0px 40px 0px #FFFFFF40;
 }
   
